[package]
name = "uniswap-skimmer-mev"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.6", features = [
  "full",
  "node-bindings",
  "provider-debug-api",
] }
eyre = "0.6.12"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.31"
serde_json = "1.0"

[[example]]
name = "discover_factories"
path = "examples/discover_factories.rs"

[[example]]
name = "find_swap_txs"
path = "examples/find_swap_txs.rs"
